--- a/package.json
+++ b/package.json
@@ -54,22 +54,24 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^2.0.0",
     "http": "^0.0.0",
-    "konva": "^2.1.3",
-    "mongoose": "^5.4.6",
+    "konva": "^3.3.3",
+    "moment": "^2.24.0",
+    "mongoose": "^5.6.2",
     "multer": "^1.4.1",
     "node-restful": "^0.2.6",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.8.6",
+    "react-datepicker": "^2.7.0",
+    "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.4",
     "react-https-redirect": "^1.1.0",
     "react-modal": "^3.8.1",
-    "react-redux": "5.0.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-table": "^6.7.6",
+    "react-table": "^6.10.0",
     "react-textarea-autosize": "^7.1.0",
-    "redux": "3.7.2",
-    "redux-thunk": "2.2.0",
-    "truffle-hdwallet-provider": "^1.0.2"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "truffle-hdwallet-provider": "^1.0.12"
   },
   "scripts": {
     "start": "node scripts/start.js",
